--- a/infos.html
+++ b/infos.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Naolib – transports durables</title>
-<link rel="icon" href="logopage.svg">
+<link rel="icon" href="logopage.png" type="image/png+xml">
 <link rel="stylesheet" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
