--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <p style="color:black;">
         Tramway électrique à faible émission
         Bus hybrides et propres
+        Busway électrique
         Vélos et navibus
       </p>
     </div>
