--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     <div class="card-text">
       <h3>Les solutions proposées</h3>
       <p style="color:black;">
-        Tramway électrique à faible émission
-        Bus hybrides et propres
-        Busway électrique
+        Des tramway électrique à faible émission, des
+        Bus hybrides et propres ou encore des
+        Busway électrique voir même des
         Vélos et navibus
       </p>
     </div>
